k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
  namespace: fredsoe-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: tetris
          image: ghcr.io/jacobfredsoee/tetris:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
