k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tetris
  namespace: fredsoe-io
spec:
  selector:
    app: tetris
  ports:
    - port: 80
      targetPort: 3000
